# compilers-course

lab_01/ArabianNights/: AbstractGenie.cpp  AbstractGenie.h  CMakeLists.txt  FriendlyGenie.cpp  FriendlyGenie.h  GrumpyGenie.cpp  GrumpyGenie.h  MagicLamp.cpp  MagicLamp.h  RecyclableDaemon.cpp  RecyclableDaemon.h
lab_02/: AbstractSheep.h  BlackSheep.cpp  CMakeLists.txt  Shearable.h  WhiteSheep.h  main.cpp
lab_02/sheeps_and_herds_01/: AbstractSheep.cpp  BlackSheep.h  Herd.cpp  Herd.h  WhiteSheep.cpp
lab_02/sheeps_and_herds_02/: AbstractSheep.h  Animal.h  BlackSheep.h  CMakeLists.txt  Goat.h  Herd.h  PetVisitor.h  SheerVisitor.h  Visitor.h  WhiteSheep.h  main.cpp
